# aiaml

./: .gitignore  CLAUDE.md  LICENSE  README.md  TESTING_GUIDE.md  TESTING_PATTERNS.md  aiaml_server.py  pyproject.toml  requirements.txt  run_server.sh  run_tests.py  spec.md  test.py  test_automated_file_management.py  test_branch_detection.py  test_branch_detection_integration.py  test_core_functionality.py  test_cross_platform.py  test_cross_platform_file_ops.py  test_end_to_end_integration.py  test_enhanced_git_sync_result.py  test_git_sync_result_integration.py  test_input_validation.py  test_local_only_server.py  test_mcp_integration.py  test_mcp_server_integration.py  test_module_structure.py  test_optimized_search.py  test_performance_monitoring.py  test_refactored_code.py  test_repository_cloning.py  test_repository_state.py  test_repository_synchronization.py  test_search_performance_detailed.py  test_task7_verification.py  test_task_requirements.py  test_upstream_tracking.py
.github/workflows/: claude.yml
.kiro/steering/: product.md  structure.md  tech.md  testing.md
aiaml/: __init__.py  auth.py  benchmarks.py  config.py  errors.py  file_lock.py  file_manager.py  git_sync.py  memory.py  performance.py  platform.py  server.py
aiaml/file_manager/: __init__.py  backup.py  core.py  git_init.py  recovery.py
aiaml/git_sync/: __init__.py  backward_compatibility_test.py  branch_utils.py  clone.py  compatibility.py  error_recovery.py  error_strategies.py  error_types.py  manager.py  manager_core.py  manager_sync.py  operations.py  performance_logger.py  state.py  (+7 more)
(+8 files in other folders)
